mainheader, header z-index bug fix

--- a/src/components/layout/header/header.sass
+++ b/src/components/layout/header/header.sass
@@ -13,7 +13,7 @@ header
             @include flex($align: center)
             overflow-y: hidden
             margin-left: 1rem
-            z-index: 7
+            z-index: 8
             @include responsive_sm
                 gap: 1.5rem
                 height: 100%
@@ -61,7 +61,7 @@ header
             top: 0
             right: -100%
             background-color: $headerBG
-            z-index: 6
+            z-index: 7
             transition: .3s
             @include responsive_sm
                 gap: 1rem
@@ -190,7 +190,7 @@ header
             @include size(50px, 100%)
             @include flex(column, space-between, center)
             padding: 1rem .6rem
-            z-index: 6
+            z-index: 7
             transition: .3s
             @include responsive_sm
                 display: none
